[package]
name = "modern-minesweeper"
version = "0.2.0"
edition = "2024"
description = "A Simple minesweeper game built with Rust + Slint"
homepage = "https://github.com/RezaBani/modern-minesweeper"
repository = "https://github.com/RezaBani/modern-minesweeper"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics"]
categories = [
  "game-development",
  "games",
]
default-run = "MineSweeper"

[[bin]]
name = "MineSweeper"
path = "src/bin/mine_sweeper_gui.rs"

[dependencies]
rand = "0.9.2"
slint = { version = "1.14.1", default-features = false, features = [
  "backend-winit",
  "compat-1-2",
  "renderer-skia"
] }

[build-dependencies]
slint-build = "1.14.1"
