[package]
name = "modern-minesweeper"
version = "0.3.2"
edition = "2024"
description = "A Simple minesweeper game built with Rust + Slint"
homepage = "https://github.com/RezaBani/modern-minesweeper"
repository = "https://github.com/RezaBani/modern-minesweeper"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics"]
categories = [
  "game-development",
  "games",
]
default-run = "MineSweeper"

[[bin]]
name = "MineSweeper"
path = "src/bin/mine_sweeper_gui.rs"

[dependencies]
meta-enum = "0.1.0"
rand = "0.9.2"
slint = "1.14.1"

[build-dependencies]
slint-build = "1.14.1"
